<resources>
    <string name="app_name">LoginAndSignUp</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="textLogin">Login</string>
    <string name="link">Create an account </string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="progress_decs">authentication</string>
    <string name="textSignUp">Sign Up</string>
    <string name="textName">Name</string>
    <string name="linkBack">Already have an account?</string>
</resources>
