<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.loginandsignup.SignUpActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingObjects"
        android:paddingRight="@dimen/paddingScreen"

        tools:context="com.loginandsignup.SignUpActivity">

        <ImageView
            android:id="@+id/activity_sign_up_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/activity_sign_up_edtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/activity_sign_up_edtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEmail"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/activity_sign_up_edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textPassword"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/activity_sign_up_btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginObjects"
            android:background="@color/btnColor"
            android:text="@string/textSignUp"
            android:textColor="@color/btntextcolor" />

        <TextView
            android:id="@+id/activity_sign_up_txtbacklogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginObjects"
            android:gravity="center"
            android:text="@string/linkBack"
            android:textColorLink="@color/btnColor" />
    </LinearLayout>
</ScrollView>
