<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradlogin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.loginandsignup.LoginActivity">
    <!--to remove focus with touching anywhere on the page-->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradlogin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingScreen"
        android:paddingRight="@dimen/paddingScreen"
        android:weightSum="1">

        <ImageView
            android:id="@+id/activity_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <!--To remove focusable from edit box  add linear layout before edit text-->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginObjects">

            <EditText
                android:id="@+id/activity_login_edtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEmail"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginObjects">

            <EditText
                android:id="@+id/activity_login_edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword"
                android:inputType="numberPassword"
                android:maxLength="6"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_login_btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginObjects"
            android:background="@color/btnColor"
            android:enabled="true"
            android:padding="@dimen/paddingObjects"
            android:text="@string/textLogin"
            android:textColor="@color/btntextcolor"
            />

        <TextView
            android:id="@+id/activity_login_txtlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginObjects"
            android:layout_weight="0.36"
            android:gravity="center"
            android:text="@string/link"
            android:textColorLink="@color/btnColor" />
    </LinearLayout>


</LinearLayout>
